grammar.js
    source_file: $ => seq(
      any_amount_of($._definition),
      optional("\0")
    ),

    _definition: $ => seq(
      $._statement,
    ),

    function_start: () => /function/i,

    function_statement: $ => seq(
      seq($.function_start, /\s*/, field("name", $.identifier)),
      $.function_impl
    ),

    _expression: $ => choice(
      $.new_expression,
      $.ternary_expression,
      $.null_coalescing_expression,
      $.type_cast_expression,
      $.parenthesized_expression,
      $.prefix_exp,
      $.literal,
      $.binary_expression,
      $.unary_expression,
      $.tagged_template_string,
      $.annonymous_sub,
      $.annonymous_function
    ),

    class_statement: $ => seq(
      optional(repeat1(field('annotation', $.annotation))),
      alias(/class/i, $.class_start),
      field('name', $.identifier),
      optional($.class_heritage),
      optional(field('body', $.class_body)),
      $.end_class
    ),

    class_body: $ => repeat1($.class_member),

    class_member: $ => choice(
      $.class_field,
      $.class_method
    ),

    class_field: $ => seq(
      optional(field('annotation', $.annotation)),
      optional($.access_modifier),
      field('name', $.identifier),
      optional(seq('=', field('value', $._expression))),
      optional($.type_specifier)
    ),

    access_modifier: $ => choice(
      alias(/public/i, $.public),
      alias(/private/i, $.private),
      alias(/protected/i, $.protected)
    ),

    parameter_list: $ => seq(
      '(',
      commaSep($.parameter),
      ')'
    ),

    parameter: $ => seq(
      field('name', $.identifier),
      optional(seq('=', $._expression)),
      optional(
        $.type_specifier
      )
    ),

    return_type: $ => $.type_specifier,

    _type_with_array: $ => choice(
      $._type_base,
      $._type_array
    ),

    type_specifier: $ => seq(
      $.as,
      field('type', $._type_with_array)
    ),

    as: $ => /as/i,
    end_function: $ => /end\s+function/i,
    end_class: $ => /end\s+class/i,

    interface_statement: $ => seq(
      alias(/interface/i, $.interface_start),
      field('name', $.identifier),
      optional(field('body', $.interface_body)),
      $.end_interface
    ),

    interface_body: $ => repeat1($.interface_member),

    dotted_identifier: $ => seq(
      $.identifier,
      repeat(seq('.', $.identifier))
    ),

    interface_member: $ => $.interface_method_signature,

    interface_method_signature: $ => seq(
      choice(
        seq($.sub_start, field('name', $.identifier), $.parameter_list),
        seq($.function_start, field('name', $.identifier), $.parameter_list, optional($.return_type))
      )
    ),

    end_interface: $ => /end\s+interface/i,
    end_statement: $ => choice(
      $.end_sub,
      $.end_function,
      $.end_if,
      $.conditional_compl_end_if,
      $.end_for,
      $.end_while,
      $.end_try,
      $.end_class,
      $.end_namespace,
      $.end_enum
    ),

    identifier: $ => choice($.m, $.regular_identifier),
    regular_identifier: $ => token(prec(0, /[a-zA-Z_][a-zA-Z0-9_]*/)),
  }
});

function commaSep(rule) {
  return optional(
    seq(
      rule,
      repeat(
        seq(
          ',',
          rule
        )
      )
    )
  )
}

function commaSepNewLine(rule) {
  return optional(
    seq(
      rule,
      repeat(
        seq(
          optional(','),
          rule
        )
      )
    )
  )
}

function commaSep1(rule) {
  return seq(rule, repeat(seq(',', rule)));
}

function any_amount_of() {
  return repeat(seq(...arguments));
}
